Updated initial pug layout, created basic empty project.

--- a/MyWebsite/MyWebsite/views/layout.pug
+++ b/MyWebsite/MyWebsite/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/main.css')
+    block scripts
   body
     block content
+        
