--- a/MyWebsite/MyWebsite/views/includes/header.pug
+++ b/MyWebsite/MyWebsite/views/includes/header.pug
@@ -1,13 +1,13 @@
 ﻿header
-	#menu.custom-wrapper.pure-g
+	#menu.navbar-wrapper.pure-g
 		.pure-u-1.pure-u-md-1-3
 			.pure-menu
-				a.pure-menu-heading.custom-brand(href='#') Carlos D
-				a#toggle.custom-toggle(href='#')
+				a.pure-menu-heading.navbar-brand(href='#') Carlos D
+				a#toggle.navbar-toggle(href='#')
 					s.bar
 					s.bar
 		.pure-u-1.pure-u-md-2-3
-			.pure-menu.pure-menu-horizontal.custom-can-transform
+			.pure-menu.pure-menu-horizontal.navbar-can-transform
 				ul.pure-menu-list
 					li.pure-menu-item
 						a.pure-menu-link(href='#') About Me
