--- a/MyWebsite/MyWebsite/public/stylesheets/less/variables.less
+++ b/MyWebsite/MyWebsite/public/stylesheets/less/variables.less
@@ -1,2 +1,35 @@
-﻿@main-background-color: #e1fbff;
-@navbar-open-height: 11em;
+﻿/*Fonts*/
+@main-font-family: 'ClearSans' 'Lora' Arial;
+@main-font-weight: 400;
+@main-font-style: normal;
+@main-font-size: 14px;
+
+/*Colors*/
+@main-background-color: #e1fbff;
+@container-color: #dfffff;
+@container-font-color: #1b0f00;
+@header-color: #e1fbff;
+@header-font-color: #000000;
+@banner-color: #002b28;
+@banner-font-color: #dffffd;
+@navbar-color: #84acd1;
+@navbar-font-color: #191412;
+@navbar-toggle-color: #00090c;
+@content-color: #7aa6b6;
+@content-font-color: #00090c;
+@footer-color: #002b28;
+@footer-font-color: #dffffd;
+
+@brand-color: #95bbb1;
+@brand-font-color: #1a152c;
+@active-color: #0e0028;
+@active-font-color: #dbffdf;
+@link-color: #163c36;
+@link-font-color: #99d1ff;
+@hover-color: #dbffdf;
+@hover-font-color: #00090c;
+@clicked-color: #a9edb0;
+@clicked-font-color: #010907;
+
+/*Settings*/
+@navbar-open-height: 10.6em;
