--- a/MyWebsite/MyWebsite/views/includes/footer.pug
+++ b/MyWebsite/MyWebsite/views/includes/footer.pug
@@ -1,13 +1,14 @@
 ﻿footer
-    p.is-center
-        a(href='') About Me
-        |   |  
-        a(href='') Experience
-        |   |  
-        a(href='') Projects
-        |   |  
-        a(href='') Contact
+	.pure-u-1
+		p.is-center
+			a(href='') About Me
+			|   |  
+			a(href='') Experience
+			|   |  
+			a(href='') Projects
+			|   |  
+			a(href='') Contact
 
-    p.is-center &copy; 2018 Carlos Downie. All rights reserved.
-        br
-        a(href='') Privacy Policy
+		p.is-center &copy; 2018 Carlos Downie. All rights reserved.
+			br
+			a(href='') Privacy Policy
