--- a/MyWebsite/MyWebsite/views/layout.pug
+++ b/MyWebsite/MyWebsite/views/layout.pug
@@ -15,7 +15,13 @@ html
 			link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css')
 		<!--<![endif]-->
 	body
-		.pure-u-1
-			block content
+		.pure-g
+			.pure-u-1.pure-u-md-1-24
+			.pure-u-1.pure-u-md-22-24.container
+				include includes/header.pug
+				.content
+					block content
+				include includes/footer.pug
+			.pure-u-1.pure-u-md-1-24
 		block scripts
 		script(src="../javascripts/main.js")
